# CUMS

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml
crates/cums-gui/: Cargo.toml
crates/cums-gui/src/: app.rs  main.rs
crates/cums-sekiro/: Cargo.toml
crates/cums-sekiro/examples/: check_chunks.rs  compare_fsb.rs  deep_compare.rs  extract_audio.rs  test_ds2.rs  test_ffmpeg.rs  test_load.rs  test_smain.rs
crates/cums-sekiro/src/: crypto.rs  fsb.rs  lib.rs
crates/cums-sekiro/src/audio/: mod.rs  mp3.rs  vorbis.rs
crates/cums-sekiro/src/formats/: bhd5.rs  bnd4.rs  dcx.rs  mod.rs
crates/cums-sekiro/src/keys/: ds3.pem  sekiro.pem
