[workspace]
resolver = "2"
members = [
    "crates/cums-sekiro",
    "crates/cums-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CUMS Contributors"]
license = "MIT"
description = "CUMS - Audio modding tool for FromSoftware games"

[profile.release]
lto = true
codegen-units = 1
strip = true
